<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="product"
            type="umbc.edu.ilovezappos.models.Product" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/cordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="umbc.edu.ilovezappos.activities.ProductDetailActivity">

        <RelativeLayout
            android:id="@+id/rl_main_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </android.support.design.widget.AppBarLayout>

            <ScrollView
                android:id="@+id/scrollView_detail_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/rl_productdetails_bottombutton">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/icons"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/rl_productimage"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_alignParentTop="true"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/image_productdetail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:imageUrl="@{product.thumbnailImageUrl}"
                            tools:background="@drawable/ic_menu_gallery" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_productdetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rl_productimage"
                        android:layout_margin="@dimen/item_product_padding_15dp">

                        <LinearLayout
                            android:id="@+id/ll_productdetails"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_toLeftOf="@+id/ll_productshare"
                            android:orientation="vertical"
                            android:paddingRight="@dimen/item_product_padding_7dp">

                            <TextView
                                android:id="@+id/text_detail_brand_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:text="@{product.brandName}"
                                android:textColor="@color/secondary_text"
                                android:textSize="@dimen/textsize_large"
                                app:fontMedium="@{``}"
                                tools:text="Nike" />

                            <TextView
                                android:id="@+id/text_productdetail_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/item_product_padding_3dp"
                                android:ellipsize="end"
                                android:text="@{product.productName}"
                                android:textColor="@color/secondary_text"
                                android:textSize="@dimen/textsize_15dp"
                                app:fontMedium="@{``}"
                                tools:text="Women Training Shoes" />

                            <LinearLayout
                                android:id="@+id/ll_product_prices"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/text_productdetail_originalprice"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@{product.price}"
                                    android:textColor="@color/color_Black"
                                    android:textSize="@dimen/textsize_large"
                                    app:fontBold="@{``}"
                                    tools:text="$2000" />

                                <TextView
                                    android:id="@+id/text_productdetail_discountprice"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/textsize_tiny"
                                    android:text="@{product.originalPrice}"
                                    android:textSize="@dimen/textsize_15dp"
                                    app:addStrike="@{product.percentOff}"
                                    app:fontMedium="@{``}"
                                    app:hideDiscountText="@{product.percentOff}"
                                    tools:text="$2000" />

                                <TextView
                                    android:id="@+id/text_productdetail_discount_value"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/textsize_tiny"
                                    android:text='@{product.percentOff+" Off"}'
                                    android:textColor="@color/color_red_text"
                                    android:textSize="@dimen/textsize_15dp"
                                    app:fontMedium="@{``}"
                                    app:hideDiscountText="@{product.percentOff}"
                                    tools:text="60% Off" />
                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ll_productshare"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerInParent="true"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/image_productdetail_info"
                                android:layout_width="60dp"
                                android:layout_height="30dp"
                                android:background="@drawable/button_roundedcorner_bg_lightgrey"
                                android:text="@string/button_title_info"
                                android:textColor="@color/secondary_text"
                                app:fontBold="@{``}" />
                        </LinearLayout>
                    </RelativeLayout>

                    <View
                        android:id="@+id/view_line1"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_below="@+id/rl_productdetails"
                        android:background="@color/secondary_light_text" />

                    <RelativeLayout
                        android:id="@+id/rl_productdetails_returnpolicy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/view_line1"
                        android:layout_margin="@dimen/item_product_padding_15dp">

                        <TextView
                            android:id="@+id/text_detail_return_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:text="@string/button_title_return_policy"
                            android:textColor="@color/color_darkgrey_Bg"
                            android:textSize="@dimen/textsize_15dp"
                            app:fontBold="@{``}"
                            tools:text="Nike" />

                        <TextView
                            android:id="@+id/text_detail_return_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/text_detail_return_title"
                            android:ellipsize="end"
                            android:paddingTop="@dimen/item_product_padding_7dp"
                            android:text="@string/title_return_policy_content"
                            android:textColor="@color/secondary_text"
                            android:textSize="@dimen/textsize_medium"
                            app:fontMedium="@{``}" />
                    </RelativeLayout>
                </RelativeLayout>
            </ScrollView>

            <LinearLayout
                android:id="@+id/rl_productdetails_bottombutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:weightSum="2">

                <Button
                    android:id="@+id/button_product_wishlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/button_title_whishlist"
                    android:textColor="@android:color/white"
                    android:layout_weight="0.5" />

                <Button
                    android:id="@+id/button_product_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/button_title_addtocart"
                    android:textColor="@android:color/white"
                    android:layout_weight="1.5" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>
